--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <header class="main-header">
-        <h1 id="title">FreeCodeCamp Survey Form</h1>
+        <h1 id="title">freeCodeCamp Survey Form</h1>
         <p id="description">
           Thank you for taking the time to help us improve our platform
         </p>
